--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+<img src="assets/sneha.png" alt="Profile Picture" width="200">
+
     <header>
         <h1>Hello, I'm [Sneha Channappagoudar] 👋</h1>
         <p>I am passionate about technology and problem-solving. Here's a glimpse of my work:</p>
