--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-<img src="C:\Users\USER\OneDrive\Documents\Assets\sneha.png" alt="Profile Picture" width="200">
+<img src="https://github.com/Sneha-C-02/routeoptimization.github.io/blob/main/asset/sneha.png?raw=true" width="200">
 
 
     <header>
