--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <dt>Portfolio Topic/Domain</dt>
             <dd>Route Optimization</dd>
         </dl>
-        <a href="https://docs.google.com/document/d/1L52SAXb7JJqXvendh_2oI6cWzW57eaA8/edit" target="_blank">Download Algorithms and Their Applications</a>
+        <a href="https://drive.google.com/file/d/1fXJYuQspe1egz2ZrO2lTmI7wRxwbIGaY/view?usp=sharing" target="_blank">Download Algorithms and Their Applications</a>
 
         <blockquote>“The only way to do great work is to love what you do.” – Steve Jobs</blockquote>
     </section>
