--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
             <dt>Portfolio Topic/Domain</dt>
             <dd>Route Optimization</dd>
         </dl>
-        <a href="https://drive.google.com/file/d/1fXJYuQspe1egz2ZrO2lTmI7wRxwbIGaY/view?usp=sharing" target="_blank">Download Algorithms and Their Applications</a>
+       <a href="https://drive.google.com/file/d/1fXJYuQspe1egz2ZrO2lTmI7wRxwbIGaY/view?usp=sharing" target="_blank" style="display: inline-flex; align-items: center; justify-content: center; background-color: #007bff; color: #fff; font-size: 16px; font-weight: bold; padding: 10px 20px; border-radius: 4px; text-decoration: none; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);">
+  Download
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="margin-left: 8px; width: 16px; height: 16px; fill: #fff;">
+    <path d="M12 16l4-4h-3V4h-2v8H8l4 4zM5 18v2h14v-2H5z" />
+  </svg>
+</a>
 
         <blockquote>“The only way to do great work is to love what you do.” – Steve Jobs</blockquote>
     </section>
