--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <header>
         <h1>Hello, I'm Sneha Channappagoudar 👋</h1>
         <p>I am passionate about technology and problem-solving. Here's a glimpse of my work:</p>
+        <a href="https://sites.google.com/kletech.ac.in/sneha-daa-portfolio/home" class="link-button" target="_blank">Visit Portfolio</a>
+
     </header>
 
     <section>
@@ -58,12 +60,7 @@
             <dt>Portfolio Topic/Domain</dt>
             <dd>Route Optimization</dd>
         </dl>
-       <a href="https://drive.google.com/file/d/1fXJYuQspe1egz2ZrO2lTmI7wRxwbIGaY/view?usp=sharing" target="_blank" class="download-button">
-  Download
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-    <path d="M12 16l4-4h-3V4h-2v8H8l4 4zM5 18v2h14v-2H5z" />
-  </svg>
-</a>
+      
 
 
         <blockquote>“The only way to do great work is to love what you do.” – Steve Jobs</blockquote>
