--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         <h2>🛠️ Projects</h2>
         <ul>
             <li><strong>Project 1</strong>: public transport route optimizatrion</li>
-            <a href="https://sites.google.com/kletech.ac.in/sneha-daa-portfolio/home" class="link-button" target="_blank">Visit Portfolio</a>
-
         </ul>
+        <a href="https://sites.google.com/kletech.ac.in/sneha-daa-portfolio/home" class="link-button" target="_blank">Project</a>
 
         <h2>🚀 Skills</h2>
         <ul>
