--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
             <li><strong>Project 1</strong>: public transport route optimizatrion</li>
         </ul>
-       <a href="https://sites.google.com/kletech.ac.in/sneha-daa-portfolio/home" class="link-button" target="_blank">Visit Portfolio</a>
+       <a href="https://sites.google.com/kletech.ac.in/sneha-daa-portfolio/home" class="link-button" target="_blank">Project</a>
 
 
         <h2>🚀 Skills</h2>
